made: basic app
