# internal/delivery/handlers/link.go
@@ -5,6 +5,7 @@ import (
 	"URLProject/internal/delivery/payload"
 	"URLProject/internal/entity"
 	"URLProject/internal/repository"
+	"URLProject/pkg/event"
 	"URLProject/pkg/request"
 	"fmt"
 	"github.com/gin-gonic/gin"
@@ -16,11 +17,11 @@ import (
 
 type LinkServer struct {
 	linkRepository *repository.LinkRepository
-	logger         *log.Logger
+	eventBus       *event.EventBus
 }
 
-func NewLinkServer(linkRepository *repository.LinkRepository) *LinkServer {
-	return &LinkServer{linkRepository: linkRepository}
+func NewLinkServer(linkRepository *repository.LinkRepository, eventBus *event.EventBus) *LinkServer {
+	return &LinkServer{linkRepository: linkRepository, eventBus: eventBus}
 }
 
 // @Summary Create
@@ -29,7 +30,7 @@ func NewLinkServer(linkRepository *repository.LinkRepository) *LinkServer {
 // @Accept json
 // @Produce json
 // @Param user body payload.LinkCreateRequest true "link's credentials"
-// @Success 201 {object} payload.LinkResponse "linke is created successfully"
+// @Success 201 {object} string "linke is created successfully"
 // @Failure 400 {object} string "bad credentials"
 // @Failure 500 {object} string "internal server error"
 // @Router /link [post]
@@ -64,7 +65,7 @@ func (ls *LinkServer) Create(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param hash path string true "URL's Hash"
-// @Success 200 {object} payload.LinkResponse "linke was found"
+// @Success 200 {object} string "linke was found"
 // @Failure 400 {object} string "bad credentials"
 // @Failure 500 {object} string "internal server error"
 // @Router /link/{hash} [get]
@@ -76,7 +77,52 @@ func (ls *LinkServer) GoTo(ctx *gin.Context) {
 		ctx.Writer.WriteHeader(http.StatusInternalServerError)
 		return
 	}
+
+	go ls.eventBus.Publish(event.Event{
+		Type: event.EventLinkVisited,
+		Data: link.ID,
+	})
 	http.Redirect(ctx.Writer, ctx.Request, link.Url, http.StatusTemporaryRedirect)
+}
+
+// @Summary GetAll
+// @Description Get all link by limit and offset
+// @Tags Link
+// @Produce json
+// @Security BearerAuth
+// @Param offset query int true "Offset for pagination"
+// @Param limit query int true "Limit for pagination"
+// @Success 200 {object} map[string]string "link was found"
+// @Failure 400 {object} string "bad credentials"
+// @Failure 500 {object} string "internal server error"
+// @Router /link [get]
+func (ls *LinkServer) GetAll(ctx *gin.Context) {
+	offset, err := strconv.Atoi(ctx.Query("offset"))
+	if err != nil {
+		log.Printf("unable to get offset query param: %s", err)
+		ctx.Writer.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	limit, err := strconv.Atoi(ctx.Query("limit"))
+	if err != nil {
+		log.Printf("unable to get limit  query param: %s", err)
+		ctx.Writer.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	links, err := ls.linkRepository.GetAll(limit, offset)
+	if err != nil {
+		log.Printf("unable to get links: %s", err)
+		ctx.Writer.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	count := ls.linkRepository.Count()
+
+	ctx.JSON(http.StatusOK, payload.GetAllLinksResponse{
+		Links: links,
+		Count: count,
+	})
+
 }
 
 // @Summary Update
@@ -86,7 +132,7 @@ func (ls *LinkServer) GoTo(ctx *gin.Context) {
 // @Produce json
 // @Security BearerAuth
 // @Param id path int true "URL's id"
-// @Success 200 {object} payload.LinkResponse "linke is updated successfully"
+// @Success 200 {object} string "linke is updated successfully"
 // @Failure 400 {object} string "bad credentials"
 // @Failure 500 {object} string "internal server error"
 // @Router /link/{id} [patch]
@@ -136,7 +182,7 @@ func (ls *LinkServer) Update(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "URL's id"
-// @Success 200 {object} payload.LinkResponse "linke is deleted successfully"
+// @Success 200 {object} string "linke is deleted successfully"
 // @Failure 400 {object} string "bad credentials"
 // @Failure 500 {object} string "internal server error"
 // @Router /link/{id} [delete]
